<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <LinearLayout
        android:id="@+id/ll_group"
        android:layout_height="80dp"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:gravity="center_vertical">
        <RelativeLayout 
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1">
            <ImageView
                android:id="@+id/pop_fenxiang"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:src="@drawable/conversation_options_share_photo"
                android:scaleType="fitXY"
                android:contentDescription="@string/app_name"
                android:layout_centerHorizontal="true"/>
            <TextView 
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textColor="@color/color_gray"
                android:text="@string/pop_fenxiang"
                android:layout_below="@id/pop_fenxiang"
                android:layout_centerHorizontal="true"/>
        </RelativeLayout>
        
        <View 
            android:layout_height="120dp"
            android:layout_width="0.5dp"
            android:background="@color/devide_line"/>
        
        <RelativeLayout 
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1">
            <ImageView
                android:id="@+id/btn_map"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:src="@drawable/conversation_options_map"
                android:scaleType="fitXY"
                android:contentDescription="@string/app_name"
                android:layout_centerHorizontal="true"/>
            <TextView 
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textColor="@color/color_gray"
                android:text="@string/pop_map"
                android:layout_below="@id/btn_map"
                android:layout_centerHorizontal="true"/>
        </RelativeLayout>

    </LinearLayout>

</LinearLayout>
