<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/login_bg"
    android:orientation="vertical" >

    <RelativeLayout
	    android:layout_width="fill_parent"
	    android:layout_height="48dp"
	    android:orientation="horizontal" 
	    android:background="@color/color_blue">
	   
	     <TextView 
	        android:id="@+id/tv_top_title"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/denglu"
	        android:layout_centerInParent="true"
	        android:lines="1"
	        android:textSize="19sp"
	        android:textColor="#ffffffff"/>
	</RelativeLayout>
    	
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/login_header"
        android:orientation="vertical" >
		
		<LinearLayout  
	        android:id="@+id/login_edittext"  
	        android:layout_width="fill_parent"  
	        android:layout_height="wrap_content" 
	        android:layout_margin="20.0dip"
	        android:orientation="vertical" >  
	        <EditText  
	            android:id="@+id/login_et_account"  
	            android:layout_width="fill_parent"  
	            android:layout_height="40dp"  
	        	android:background="@drawable/login_input" 
	        	android:drawableLeft="@drawable/login_icon_account"
	            android:drawablePadding="25dip"
	            android:hint="@string/et_Num"
	            android:textColorHint="@color/hint"  
	            android:textSize="14.0dip"
	            android:ems="10"
                android:imeOptions="actionNext"
                android:inputType="phone"
                android:maxLength="11"
                android:numeric="integer"
                android:singleLine="true"  
	            android:paddingLeft="10dp" />  
	        <EditText  
	            android:id="@+id/login_et_pwd"  
	            android:layout_width="fill_parent"  
	            android:layout_height="40dp"  
	            android:background="@drawable/login_input"  
	            android:drawableLeft="@drawable/login_icon_password"
	            android:drawablePadding="25dip"
	            android:hint="@string/et_Pwd" 
	            android:textColorHint="@color/hint" 
	            android:textSize="14.0dip" 
	            android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:singleLine="true"
	            android:paddingLeft="10dp" />  
            <RadioGroup
	        	android:id="@+id/rg_select"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginTop="10.0dip"
	            android:layout_marginBottom="10.0dip"
	            android:layout_gravity="center_horizontal"
	            android:orientation="horizontal" >
	                <RadioButton
	                    android:id="@+id/geren"
	                    android:layout_width="wrap_content"
	                    android:layout_height="wrap_content"
	                    android:checked="true"
	                    android:text="个人用户"
	                    android:textColor="@color/black"
	                    android:textSize="15sp" />
	
	                <RadioButton
	                    android:id="@+id/qiye"
	                    android:layout_width="wrap_content"
	                    android:layout_height="wrap_content"
	                    android:layout_marginLeft="50dip"
	                    android:text="企业用户"
	                    android:textColor="@color/black"
	                    android:textSize="15sp" />
	    	 </RadioGroup>
	    	 <Button
		        android:id="@+id/login_btn_login"
		        android:layout_width="fill_parent"
		        android:layout_height="@dimen/base_action_bar_height"
		        android:layout_weight="1.0"
		        android:background="@drawable/login_button_blue_background"
		        android:layout_centerInParent="true"
		        android:gravity="center"
		        android:text="@string/denglu"
		        android:textColor="#FFFFFF"
		        android:textSize="16.0sp"/>
	    	 
	    </LinearLayout>
		<RelativeLayout
		        android:layout_width="fill_parent"
		        android:layout_height="40.0dip"
		        android:layout_alignParentBottom="true"
		        android:layout_margin="20.0dip"
		        android:orientation="horizontal" >
		
				<Button 
			 	    android:layout_width="wrap_content"
			        android:layout_height="28.0dip"
			        android:padding="5.0dip"
			        android:layout_alignParentLeft="true"
			 	    android:id="@+id/login_register"
			 	    android:text="@string/zhuce"
			 	    android:background="@drawable/register_button_blue_background"
			 	    android:textSize="12.0sp"
			 	    android:textColor="@drawable/register_button_blue_background" />
				<!-- 
				<ToggleButton
				    android:id="@+id/toggleButton"
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:layout_marginTop="5.0dip"
		            android:layout_alignParentRight="true"
				    android:textOn=""
					android:textOff=""
				    android:background="@drawable/toggle_me" />
				 -->
				<TextView
				    android:id="@+id/login_about"
		            android:layout_width="wrap_content"
		            android:layout_height="fill_parent"
		            android:text="@string/register_txt1"
		            android:layout_alignParentRight="true"
		            android:textColor="@color/color_blue"
		            android:textSize="16sp" />
		            
		    </RelativeLayout>
    </RelativeLayout>

</LinearLayout>